--- a/default.css
+++ b/default.css
@@ -2,8 +2,10 @@ body {
   margin: 0;
   padding: 0;
   background-image: url('img2.png');
-  background-size: cover;
+   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   font-size: 14px;
   font-family: sans-serif;
   color: white;
